@@ -237,7 +237,6 @@ md_file=
 # Obsolete configurations.
 case ${target} in
  avr-*rtems*				\
- | h8300-*rtems*			\
  | m32r-*rtems*			\
  | mep-*				\
  )
@@ -1238,10 +1237,6 @@ moxie-*-moxiebox*)
 	gnu_ld=yes
 	tm_file="${tm_file} dbxelf.h elfos.h moxie/moxiebox.h newlib-stdint.h"
 	tmake_file="${tmake_file} moxie/t-moxiebox"
-	;;
-h8300-*-rtems*)
-	tmake_file="${tmake_file} h8300/t-h8300 h8300/t-rtems"
-	tm_file="h8300/h8300.h dbxelf.h elfos.h h8300/elf.h h8300/rtems.h rtems.h newlib-stdint.h"
 	;;
 h8300-*-elf*)
 	tmake_file="h8300/t-h8300"
