@@ -1,5 +1,9 @@
 2016-06-21  Trevor Saunders  <tbsaunde+gcc@tbsaunde.org>
 
+	* config.host: Remove h8300-rtems support.
+
+2016-06-21  Trevor Saunders  <tbsaunde+gcc@tbsaunde.org>
+
 	* config.host: Remove support for knetbsd.
 
 2016-06-21  Trevor Saunders  <tbsaunde+gcc@tbsaunde.org>
